--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -26,7 +26,7 @@
 
     {% include site-header.html %}
 
-    {% include contact-form.html %}
+    {% include contact-us-modal.html %}
 
     <div id="container-experience">
 
@@ -137,10 +137,8 @@
           }, 500)
         }
 
-        if (compatibleBrowser()) {
-          window.sr = ScrollReveal();
-          sr.reveal(".top");
-        }
+        window.sr = ScrollReveal();
+        sr.reveal(".top");
       })
     </script>
   </body>
