--- a/_sass/contact-us-modal.scss
+++ b/_sass/contact-us-modal.scss
@@ -1,47 +1,45 @@
 .contact-us-modal {
   @include modal;
-  .form {
-    margin: 36px;
-    > p {
-      font-weight: 50;
-      margin-bottom: 42px;
-      color: #777777;
-      font-size: 2em;
-    }
+  .inner {
+    padding: 2em 6em;
     @include mobile {
       margin: 0;
       > p {
         padding-top: 20px;
       }
     }
-    .validation {
-      display: none;
-      margin: 0 auto 18px auto;
-      width: 80%;
-      opacity: 0.8;
-      text-align: left;
-      color: $primary-color;
-    }
-    > input {
-      margin: 0 auto 18px auto;
-      width: 80%;
-      height: 2.8em;
-      opacity: 0.8;
-      text-indent: 18px;
-      border-style: solid;
-      border-width: thin;
-      border-color: #efefef;
-      background-color: #fcfcfc;
-    }
-    > button {
-      width: 80%;
-      height: 2em;
-      margin-top: 20px;
-      border-radius: 500px;
-      font-weight: 800;
-      color: $primary-color-darker-darker;
-      border-color: $primary-color-darker-darker;
-      border-style: solid;
-    }
+  }
+  .form {
+    margin: 20px 0 0.67em 0;
+  }
+
+  .validation {
+    display: none;
+    margin: 0 auto 18px auto;
+    width: 100%;
+    opacity: 0.8;
+    text-align: left;
+    color: $primary-color;
+  }
+  .input {
+    margin: 0 auto 18px auto;
+    width: 100%;
+    height: 2.8em;
+    opacity: 0.8;
+    text-indent: 18px;
+    border-style: solid;
+    border-width: thin;
+    border-color: #efefef;
+    background-color: #fcfcfc;
+  }
+  .submit {
+    width: 100%;
+    margin-top: 20px;
+    height: 2em;
+    border-radius: 500px;
+    font-weight: 800;
+    color: $primary-color-darker-darker;
+    border-color: $primary-color-darker-darker;
+    border-style: solid;
   }
 }
