--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@
 @import "vendor/sanitize.scss";
 @import "variables.scss";
 @import "mixins.scss";
+@import "home.scss";
 @import "index.scss";
 @import "listing.scss";
 @import "listings.scss";
@@ -17,6 +18,7 @@
 @import "agent-modal.scss";
 @import "footer.scss";
 @import "contact-us-modal.scss";
+@import "contact-info.scss";
 
 .modal {
   @include modal;
