--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -228,7 +228,7 @@
               <div class="menu-top">
                 <div class="buttons">
 
-                  <a class="cool-button contact-us-link">
+                  <a class="cool-button cursor-pointer">
                     CHECK AVAILABILITY
                   </a>
 
