--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -87,7 +87,7 @@
           </div>
 
           <div>
-            <button class="contact-us-link contact-us-button">
+            <button class="cursor-pointer contact-us-button">
               CONTACT US
             </button>
           </div>
