--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -1,31 +1,60 @@
 #home-container {
+  .contact-container {
+    position: relative;
+    padding-left: 80px;
+    max-width: $page-max-width;
+    @include mobile {
+      padding: 20px;
+    }
+  }
   .contact-info {
     padding: 11px;
   }
   .contact__link {
     width: 100%;
   }
-  .contact-us {
+  .location {
     position: relative;
     color: $grey;
     min-height: 349px;
-    .contact-us-gmap-container {
+    @include mobile {
+      font-size: 0.9em;
+      position: relative;
+    }
+  }
+  .gmap-container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    @include mobile {
+      display: none;
+    }
+  }
+  .contact-content {
+    width: 42%;
+    padding: 44px 0;
+    @include mobile {
+      position: static;
       width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 1;
+      padding: 0;
     }
-    .contact-content {
-      width: 42%;
-      padding: 44px 0;
-      margin-left: -18px;
-      .contact-header {
-        font-size: 34px;
-        background-color: white;
-        padding: 0.5em 18px;
-      }
+  }
+  .contact-header {
+    font-size: 34px;
+    background-color: white;
+    padding: 0.5em 18px;
+    @include mobile {
+      padding: 23px 0 14px 0;
+      margin-left: 0;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.8);
+      font-size: 52px;
     }
+  }
+  #gmap-home-page {
+    width: 100%;
+    height: 100%;
   }
 }
