--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -103,63 +103,6 @@ a {
   opacity: 0.5;
 }
 
-#contact-us-gmap {
-  width: 100%;
-  height: 100%;
-}
-
-.contact-table {
-  text-align: left;
-  margin-left: 52px;
-  > td {
-    width: 50%;
-  }
-}
-
-.contact-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  z-index: 4;
-  padding-left: 80px;
-  max-width: $page-max-width;
-}
-
-.contact-info-body {
-  font-size: 0.9em;
-  background: rgba(255, 255, 255, 0.9);
-  padding: 15px 0;
-  color: #858585;
-  width: 80%;
-  text-align: center;
-  margin: 0 auto;
-  .contact-row {
-    display: flex;
-    flex-direction: row;
-    flex-flow: row wrap;
-    justify-content: center;
-    font-size: 0.7em;
-    text-align: left;
-    padding-bottom: 9px;
-    > div {
-      position: relative;
-      float: left;
-      display: table;
-      width: 50%;
-      overflow: hidden;
-      word-wrap: break-word;
-      > div {
-        display: table-cell;
-        vertical-align: middle;
-        width: 100%;
-      }
-      > .icon-holder {
-        width: 46px;
-      }
-    }
-  }
-}
-
 .black {
   color: black;
 }
@@ -175,7 +118,7 @@ a {
   padding-left: 1px;
 }
 
-.contact-us-link {
+.cursor-pointer {
   cursor: pointer;
 }
 
@@ -947,28 +890,6 @@ a {
     height: 0;
   }
 
-  .contact-info-body {
-    font-size: 0.9em;
-    margin-top: 12px;
-    width: 100%;
-    .contact-row {
-      padding-left: 0;
-      margin: 0 auto;
-      width: 80%;
-      > div {
-        width: 100%;
-        margin-bottom: 8px;
-        > img {
-          float: left;
-          margin-top: -12px;
-          margin-bottom: 8px;
-        }
-        > span {
-          margin-top: 10px;
-        }
-      }
-    }
-  }
   .navigation-arrow-right {
     right: 5%;
   }
@@ -1026,32 +947,6 @@ a {
     height: 29px;
   }
 
-  #contact-us-home-section {
-    font-size: 0.9em;
-    position: relative;
-    .contact-us-gmap-container {
-      display: none;
-    }
-    .contact-container {
-      padding-left: 0;
-      .contact-content {
-        position: static;
-        width: 100%;
-        padding-top: 0;
-        margin-left: 0;
-        .contact-header {
-          padding: 23px 0 14px 0;
-          margin-left: 0;
-          text-align: center;
-          background: rgba(255, 255, 255, 0.8);
-          font-size: 52px;
-        }
-        .contact-info {
-          font-size: 0.95em;
-        }
-      }
-    }
-  }
   .small-hidden {
     display: none;
   }
@@ -1159,23 +1054,6 @@ a {
 
   .services-info {
     width: 100%;
-  }
-
-  #contact-us {
-    background-color: white;
-    background-image: none;
-    height: 340px;
-    .contact-content {
-      width: 100%;
-      top: 0;
-      left: 0;
-      .contact-header {
-        text-align: center;
-      }
-      .contact-info {
-        padding: 0 0 0 20px;
-      }
-    }
   }
 }
 .slick-slide {
