--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
         ABOUT
       </a>
 
-      <a class="title cursor-pointer link">
+      <a class="title cursor-pointer contact-us-link link">
         CONTACT
       </a>
 
