--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -89,7 +89,7 @@
           </li>
 
           <li>
-            <a class="cursor-pointer">
+            <a class="cursor-pointer contact-us-link">
               CONTACT
             </a>
           </li>
