--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -7,12 +7,15 @@
       padding: 20px;
     }
   }
+
   .contact-info {
     padding: 11px;
   }
+
   .contact__link {
     width: 100%;
   }
+
   .location {
     position: relative;
     color: $grey;
@@ -22,16 +25,22 @@
       position: relative;
     }
   }
+
   .gmap-container {
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
+    > div {
+      width: 100%;
+      height: 100%;
+    }
     @include mobile {
       display: none;
     }
   }
+
   .contact-content {
     width: 42%;
     padding: 44px 0;
@@ -41,6 +50,7 @@
       padding: 0;
     }
   }
+
   .contact-header {
     font-size: 34px;
     background-color: white;
@@ -52,9 +62,5 @@
       background: rgba(255, 255, 255, 0.8);
       font-size: 52px;
     }
-  }
-  #gmap-home-page {
-    width: 100%;
-    height: 100%;
   }
 }
