--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -23,7 +23,10 @@
   >
 
     <div>
-      <img src="/images/email-icon.png" class="icon-small" />
+      <img
+        src="/images/email-icon.png"
+        class="icon-small"
+      />
     </div>
 
       <div>
