Clarify comment. Fix instagram link.

--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -55,7 +55,7 @@
   </a>
 
   <a
-    href="https://www.instagram.com/{{site.data.instagram}}"
+    href="https://www.instagram.com/{{site.data.contact.instagram}}"
     target="_blank"
     class="contact__link"
   >
