--- a/_includes/contact-us-modal.html
+++ b/_includes/contact-us-modal.html
@@ -3,21 +3,29 @@
 
     <div class="modal__close"></div>
 
+    <h1 class="text-centered font-weight-light">
+      CONTACT US
+    </h1>
+
+    {% include contact-info.html %}
+
     <form
       id="gform"
       class="form"
       method="POST"
     >
 
-      <p class="contact-us">
-        CONTACT US
-      </p>
-
-      {% include contact-info.html %}
+      <!-- this input is for spam prevention -->
+      <input
+        name="albuquerque"
+        type="text"
+        placeholder="Took a wrong turn"
+        class="hidden"
+      >
 
       <label
         for="name"
-        class="contact-labels"
+        class="hidden"
       >
         Name
       </label>
@@ -26,11 +34,12 @@
         name="name"
         type="text"
         placeholder="Name"
+        class="input"
       >
 
       <label
         for="email"
-        class="contact-labels"
+        class="hidden"
       >
         Email
       </label>
@@ -39,6 +48,7 @@
         name="email"
         type="text"
         placeholder="Email"
+        class="input"
       >
 
       <div
@@ -50,7 +60,7 @@
 
       <label
         for="phone"
-        class="contact-labels"
+        class="hidden"
       >
         Phone
       </label>
@@ -59,10 +69,12 @@
         name="phone"
         type="text"
         placeholder="Phone Number"
+        class="input"
       >
 
       <button
         id="submit-contact-form"
+        class="submit"
       >
         SUBMIT
       </button>
