--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -103,109 +103,6 @@ a {
   opacity: 0.5;
 }
 
-#contact-us-gmap {
-  width: 100%;
-  height: 100%;
-}
-
-.contact-table {
-  text-align: left;
-  margin-left: 52px;
-  > td {
-    width: 50%;
-  }
-}
-
-.contact-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  z-index: 4;
-  padding-left: 80px;
-  max-width: $page-max-width;
-}
-
-#contact-us-home-section {
-  position: relative;
-  color: $grey;
-  min-height: 349px;
-  .contact-us-gmap-container {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-  }
-  .contact-content {
-    width: 42%;
-    padding: 44px 0;
-    margin-left: -18px;
-    .contact-header {
-      font-size: 34px;
-      background-color: white;
-      padding: 0.5em 18px;
-    }
-    .contact-body {
-      padding: 11px;
-      margin: 0;
-      font-size: 16px;
-      background: rgba(255, 255, 255, 0.9);
-      list-style-type: none;
-      > a {
-        display: flex;
-        align-items: center;
-        padding: 6px;
-        cursor: pointer;
-        text-decoration: none;
-        &:hover {
-          > * {
-            text-decoration: underline;
-          }
-        }
-        > * {
-          text-decoration: none;
-        }
-      }
-    }
-  }
-}
-
-.contact-info-body {
-  font-size: 0.9em;
-  background: rgba(255, 255, 255, 0.9);
-  padding: 15px 0;
-  color: #858585;
-  width: 80%;
-  text-align: center;
-  margin: 0 auto;
-  .contact-row {
-    display: flex;
-    flex-direction: row;
-    flex-flow: row wrap;
-    justify-content: center;
-    font-size: 0.7em;
-    text-align: left;
-    padding-bottom: 9px;
-    > div {
-      position: relative;
-      float: left;
-      display: table;
-      width: 50%;
-      overflow: hidden;
-      word-wrap: break-word;
-      > div {
-        display: table-cell;
-        vertical-align: middle;
-        width: 100%;
-      }
-      > .icon-holder {
-        width: 46px;
-      }
-    }
-  }
-}
-
 .black {
   color: black;
 }
@@ -221,7 +118,7 @@ a {
   padding-left: 1px;
 }
 
-.contact-us-link {
+.cursor-pointer {
   cursor: pointer;
 }
 
@@ -235,6 +132,14 @@ a {
 
 .underline {
   text-decoration: underline;
+}
+
+.text-centered {
+  text-align: center;
+}
+
+.font-weight-light {
+  font-weight: 100;
 }
 
 .preview-map {
@@ -436,59 +341,6 @@ a {
   }
 }
 
-.contact-labels {
-  display: none;
-}
-
-.contact-us-modal {
-  @include modal;
-  .inner {
-    width: 67%;
-    overflow-y: auto;
-  }
-  .form {
-    margin: 36px;
-    > p {
-      font-weight: 50;
-      margin-bottom: 42px;
-      color: #777777;
-      font-size: 2em;
-    }
-    .validation {
-      display: block;
-      margin: 0 auto 18px auto;
-      width: 80%;
-      opacity: 0.8;
-      display: none;
-      text-align: left;
-      color: $primary-color;
-    }
-    > input {
-      display: block;
-      margin: 0 auto 18px auto;
-      width: 80%;
-      height: 2.8em;
-      opacity: 0.8;
-      text-indent: 18px;
-      border-style: solid;
-      border-width: thin;
-      border-color: #efefef;
-      background-color: #fcfcfc !important;
-    }
-    > button {
-      width: 80%;
-      height: 2em;
-      border-radius: 500px;
-      margin-top: 8px;
-      font-weight: 800;
-      color: $primary-color-darker-darker;
-      border-color: $primary-color-darker-darker;
-      border-style: solid;
-      margin-top: 20px;
-    }
-  }
-}
-
 .nav-modal {
   display: none;
   position: fixed;
@@ -657,6 +509,7 @@ a {
 
 #header-text {
   position: relative;
+  opacity: 0;
   z-index: 2;
   font-family: $font-brand;
   color: white;
@@ -1038,28 +891,6 @@ a {
     height: 0;
   }
 
-  .contact-info-body {
-    font-size: 0.9em;
-    margin-top: 12px;
-    width: 100%;
-    .contact-row {
-      padding-left: 0;
-      margin: 0 auto;
-      width: 80%;
-      > div {
-        width: 100%;
-        margin-bottom: 8px;
-        > img {
-          float: left;
-          margin-top: -12px;
-          margin-bottom: 8px;
-        }
-        > span {
-          margin-top: 10px;
-        }
-      }
-    }
-  }
   .navigation-arrow-right {
     right: 5%;
   }
@@ -1117,55 +948,8 @@ a {
     height: 29px;
   }
 
-  #contact-us-home-section {
-    font-size: 0.9em;
-    position: relative;
-    .contact-us-gmap-container {
-      display: none;
-    }
-    .contact-container {
-      padding-left: 0;
-      .contact-content {
-        position: static;
-        width: 100%;
-        padding-top: 0;
-        margin-left: 0;
-        .contact-header {
-          padding: 23px 0 14px 0;
-          margin-left: 0;
-          text-align: center;
-          background: rgba(255, 255, 255, 0.8);
-          font-size: 52px;
-        }
-        .contact-body {
-          font-size: 0.95em;
-        }
-      }
-    }
-  }
   .small-hidden {
     display: none;
-  }
-
-  .contact-us-modal {
-    width: 100%;
-    height: 100%;
-    overflow-y: auto;
-    .inner {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      margin-top: 0;
-      .form {
-        margin: 0;
-        > p {
-          padding-top: 20px;
-          font-size: 1.8em;
-        }
-      }
-    }
   }
 
   .services-modal-content {
@@ -1271,23 +1055,6 @@ a {
 
   .services-info {
     width: 100%;
-  }
-
-  #contact-us {
-    background-color: white;
-    background-image: none;
-    height: 340px;
-    .contact-content {
-      width: 100%;
-      top: 0;
-      left: 0;
-      .contact-header {
-        text-align: center;
-      }
-      .contact-body {
-        padding: 0 0 0 20px;
-      }
-    }
   }
 }
 .slick-slide {
