- Move nav-modal styles into their own sheet - Refactor the modal mixin so that it includes the `modal` class declaration. Important so that we can apply the mixins + easily override its values

--- a/_includes/agent-card.html
+++ b/_includes/agent-card.html
@@ -25,7 +25,7 @@
 		</div>
 
 		<div
-			class="about__button agent-modal-link"
+			class="about__button agent-modal-link cursor-pointer"
 			data-agent="{{ include.agent-index }}"
 		>
 			<div>
