--- a/_includes/contact-us-modal.html
+++ b/_includes/contact-us-modal.html
@@ -1,5 +1,5 @@
 <div class="modal contact-us-modal">
-  <div class="inner">
+  <div class="modal__inner modal__inner--floating">
 
     <div class="modal__close"></div>
 
