--- a/_includes/services-modal.html
+++ b/_includes/services-modal.html
@@ -1,4 +1,4 @@
-<div class="inner">
+<div class="modal__inner">
 	<div class="services-modal-content">
 
 		<div class="service-detail-close"></div>
