--- a/css/main.scss
+++ b/css/main.scss
@@ -19,6 +19,7 @@
 @import "footer.scss";
 @import "contact-us-modal.scss";
 @import "contact-info.scss";
+@import "nav-modal.scss";
 
 .modal {
   @include modal;
