--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -55,15 +55,22 @@
   bottom: 0;
   z-index: 101;
   background: rgba(0, 0, 0, 0.7);
-  .inner {
+  .modal__inner {
+    font-size: 1.3em;
+    background-color: white;
+    overflow-y: auto;
+  }
+  .modal__inner--full {
+    height: 100%;
+  }
+  .modal__inner--floating {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 70%;
     max-width: 1000px;
-    font-size: 1.3em;
-    background-color: white;
+    max-height: 100vh;
     @include mobile {
       position: absolute;
       top: 0;
@@ -72,7 +79,6 @@
       width: 100%;
       height: 100%;
       max-height: 100%;
-      overflow-y: auto;
     }
   }
 }
